<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="916dp"
        android:contentDescription="@string/todo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="MissingConstraints,VisualLintBounds,TextSizeCheck">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AQUI ESTA TU AMIGO"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <ImageView
            android:id="@+id/perrito"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:contentDescription="@string/terrier"
            app:srcCompat="@drawable/estresperros" />

        <Button
            android:id="@+id/perro1"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/tobi"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_adopta"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:contentDescription="TODO"
            android:text="@string/adoptame"
            tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,VisualLintButtonSize" />

        <ImageView
            android:id="@+id/pitbull1"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            app:srcCompat="@drawable/pitbull_2"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/perro2"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/zeus"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_adoptame"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Adoptame"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <Button
            android:id="@+id/MENU"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/men"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>